<?xml version="1.0"?>
<package format="2">
  <name>map_generator_gui</name>
  <version>0.0.0</version>
  <description>The map_generator_gui package</description>
  <author email="100349462@ealumnos.uc3m.es">Anibal Castrejon</author>
  <maintainer email="100349462@ealumnos.uc3m.es">anibal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tkinter</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tkinter</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tkinter</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>

  </export>
</package>
